force-app/main/default/objects/refedge__Invitation__c/refedge__Invitation__c.object-meta.xml
<CustomObject>
    <description>Content Sharing (Bound 4)</description>
    <label>Invitation</label>
    <nameField>
        <label>Invitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>