force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Invitation_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Invitation_Recipient_Type__c</fullName>
    <description>This field represent recipient of invitation eg. Contact or Co-Worker or Both.</description>
    <label>Invitation_Recipient_Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>