force-app/main/default/objects/refedge__Invitation__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>refedge__Opportunity__c</columns>
    <columns>refedge__Microsite__c</columns>
    <columns>refedge__Start_Date__c</columns>
    <columns>refedge__Invitation_Expiration__c</columns>
    <columns>refedge__Is_Invitation_Expired__c</columns>
    <columns>refedge__Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>