force-app/main/default/objects/refedge__Invitation__c/listViews/refedge__My_Invitations.listView-meta.xml
<ListView>
    <fullName>refedge__My_Invitations</fullName>
    <columns>NAME</columns>
    <columns>refedge__Opportunity__c</columns>
    <columns>refedge__Microsite__c</columns>
    <columns>refedge__Invitation_Expiration__c</columns>
    <columns>refedge__Is_Expired__c</columns>
    <columns>refedge__Notes__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Mine</filterScope>
    <label>My Invitations</label>
</ListView>